--- a/app/src/main/res/layout/fragment_item_deatil.xml
+++ b/app/src/main/res/layout/fragment_item_deatil.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_grey">
+    android:background="@color/background_grey"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -13,21 +14,37 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <TextView
-            android:id="@+id/toolbar_title"
+            android:id="@+id/item_details_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/app_name"
             android:textColor="@color/white"
             android:textSize="@dimen/font_18" />
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_items"
+    <LinearLayout
+        android:id="@+id/layout_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar"
-        android:layout_margin="@dimen/padding3" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:weightSum="2">
+
+        <ImageView
+            android:id="@+id/item_details_image"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/item_details_description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1.5"
+            android:scrollbars="vertical" />
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -37,7 +54,4 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="@dimen/padding16"
         android:visibility="gone" />
-
-    <include layout="@layout/layout_error" />
-
-</RelativeLayout>
+</LinearLayout>
